k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: abc-website-service
  namespace: abc-technologies
  labels:
    app: abc-website
spec:
  type: NodePort
  selector:
    app: abc-website
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
