k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abc-website-ingress
  namespace: abc-technologies
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: abc-tech.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: abc-website-service
                port:
                  number: 80
